--- a/app/src/main/res/menu/connections_menu.xml
+++ b/app/src/main/res/menu/connections_menu.xml
@@ -9,7 +9,7 @@
         android:icon="@drawable/ic_search"
         android:orderInCategory="15"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
-        app:showAsAction="always" />
+        app:showAsAction="always|collapseActionView" />
 
     <item
         android:id="@+id/hide_whitelist"
