--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -15,3 +15,21 @@
 a {
   word-break:break-all;
 }
+
+table {
+  background: transparent;
+  color: inherit;
+  border: 1px solid #e0e3e6;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 0.9rem;
+}
+
+table th {
+  font-weight: bold;
+  padding: 5px;
+}
+
+table td {
+  padding: 5px;
+}
