--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,19 +17,25 @@ a {
 }
 
 table {
-  background: transparent;
-  color: inherit;
   border: 1px solid #e0e3e6;
   margin-left: auto;
   margin-right: auto;
-  font-size: 0.9rem;
+  font-size: 0.92rem;
+}
+
+tr:nth-child(2n) {
+  background-color: #f6f8fa;
 }
 
 table th {
+  color: inherit;
+  background: transparent;
   font-weight: bold;
   padding: 5px;
+  border: 1px solid #e0e3e6;
 }
 
 table td {
   padding: 5px;
+  border: 1px solid #e0e3e6;
 }
