Add IAB to remove ads

--- a/app/src/main/res/menu/nav_items.xml
+++ b/app/src/main/res/menu/nav_items.xml
@@ -39,8 +39,7 @@
         <item
             android:id="@+id/action_donate"
             android:title="@string/donate"
-            android:icon="@drawable/ic_money"
-            android:visible="false" />
+            android:icon="@drawable/ic_money" />
 
         <item
             android:id="@+id/action_about"
