--- a/app/src/main/res/menu/connections_menu.xml
+++ b/app/src/main/res/menu/connections_menu.xml
@@ -1,36 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu
+<menu xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <!-- NOTE: "always|collapseActionView" must be set to prevent the search button from
+         disappearing and to avoid hiding the other elements. -->
     <item
         android:id="@+id/search"
         android:title="@string/search"
         android:icon="@drawable/ic_search"
         android:orderInCategory="15"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
-        app:showAsAction="always" />
+        app:showAsAction="always|collapseActionView"
+        tools:ignore="AlwaysShowAction" />
 
     <item
-        android:id="@+id/hide_whitelist"
-        android:title="@string/hide_whitelisted"
-        android:icon="@drawable/ic_eye_slash"
+        android:id="@+id/edit_filter"
+        android:title="@string/edit_filter"
+        android:icon="@drawable/ic_filter"
         android:orderInCategory="20"
-        app:showAsAction="ifRoom"/>
-
-    <item
-        android:id="@+id/show_whitelist"
-        android:title="@string/show_whitelisted"
-        android:icon="@drawable/ic_eye"
-        android:orderInCategory="20"
-        app:showAsAction="ifRoom"
-        android:visible="false" />
+        app:showAsAction="always">
+    </item>
 
     <item
         android:id="@+id/save"
         android:title="@string/save_to_file"
         android:orderInCategory="30"
         android:icon="@drawable/ic_save"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="never" />
 
 </menu>
