--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,7 @@
     <color name="navViewBackground">@color/design_default_color_surface</color>
     <color name="backgroundColor">@color/background_material_light</color>
     <color name="drawerItemColor">#404040</color>
+    <color name="statusOpen">#28BC36</color>
+    <color name="statusClosed">#AAAAAA</color>
+    <color name="statusError">#F20015</color>
 </resources>
