--- a/app/src/main/res/layout/edit_mask_fragment.xml
+++ b/app/src/main/res/layout/edit_mask_fragment.xml
@@ -10,13 +10,13 @@
         android:scrollbarStyle="outsideOverlay" />
 
     <TextView
-        android:id="@+id/whitelist_empty"
+        android:id="@+id/mask_empty"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center_horizontal"
         android:layout_marginTop="40dp"
         android:textStyle="italic"
         android:textSize="15sp"
-        android:text="@string/whitelist_empty">
+        android:text="@string/no_rules">
     </TextView>
 </RelativeLayout>
