--- a/app/src/main/res/values-night-v8/styles.xml
+++ b/app/src/main/res/values-night-v8/styles.xml
@@ -3,5 +3,11 @@
         <!--
         <item name="android:colorBackground">#ff000000</item>
         -->
+        <item name="materialThemeOverlay">@style/ButtonStyleTextColor</item>
+    </style>
+
+    <style name="ButtonStyleTextColor">
+        <item name="colorOnPrimary">@color/colorTabText</item>
+        <item name="colorOnSecondary">@color/colorTabText</item>
     </style>
 </resources>
