--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorTabText">@android:color/tertiary_text_light</color>
     <color name="colorTabTextSelected">@android:color/secondary_text_light</color>
     <color name="colorPrimary">#512da8</color>
-    <color name="colorPrimaryDark">#361e73</color>
+    <color name="colorPrimaryDark">#4D3294</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorBackgroundGray">#2C000000</color>
     <color name="navViewBackground">@color/design_default_color_surface</color>
