--- a/app/src/main/res/layout/edit_filter_activity.xml
+++ b/app/src/main/res/layout/edit_filter_activity.xml
@@ -31,7 +31,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:text="@string/edit_rules"
+                android:text="@string/edit_list"
                 style="?attr/materialButtonOutlinedStyle"
                 android:textColor="@color/colorTabText" />
         </RelativeLayout>
