--- a/app/src/main/res/menu/connection_context_menu.xml
+++ b/app/src/main/res/menu/connection_context_menu.xml
@@ -61,6 +61,28 @@
         </menu>
     </item>
 
+    <item android:id="@+id/whitelist_menu" android:title="@string/whitelist_action">
+        <menu>
+            <item
+                android:id="@+id/whitelist_app"
+                android:title=""
+                android:visible="false"
+                tools:title="@string/app_val" />
+
+            <item
+                android:id="@+id/whitelist_ip"
+                android:title=""
+                android:visible="false"
+                tools:title="@string/ip_address_val" />
+
+            <item
+                android:id="@+id/whitelist_host"
+                android:title=""
+                android:visible="false"
+                tools:title="@string/host_val" />
+        </menu>
+    </item>
+
     <item
         android:id="@+id/open_app_details"
         android:title="@string/app_details" />
