--- a/app/src/main/res/layout/activity_stats.xml
+++ b/app/src/main/res/layout/activity_stats.xml
@@ -242,13 +242,13 @@ android:layout_height="fill_parent">
 <RelativeLayout
     android:id="@+id/blacklists_status_row"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginTop="20dp">
 
     <TextView
         android:id="@+id/blacklists_status_lbl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:layout_marginBottom="4dp"
         android:text="@string/blacklists_status"
         android:textStyle="bold" />
@@ -260,6 +260,15 @@ android:layout_height="fill_parent">
         android:layout_below="@+id/blacklists_status_lbl"
         tools:text="Up-to-date: 4/4 ― Domain rules: 12k ― IP rules: 800\nLast update: 3h ago" />
 </RelativeLayout>
+
+<TextView
+    android:id="@+id/alloc_stats"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="20dp"
+    android:visibility="gone"
+    tools:visibility="visible"
+    tools:text="Alloc Stats..."/>
 </LinearLayout>
 
 </ScrollView>
