--- a/app/src/main/res/layout/main_screen.xml
+++ b/app/src/main/res/layout/main_screen.xml
@@ -16,10 +16,10 @@
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
+            android:background="@color/colorActionBar"
             android:layout_width="match_parent"
-            android:background="?attr/colorPrimary"
             android:layout_height="?attr/actionBarSize"
-            android:theme="@style/AppBarOverlay"
+            android:theme="@style/MyActionBar"
             app:popupTheme="@style/PopupOverlay" />
 
     </com.google.android.material.appbar.AppBarLayout>
