--- a/app/src/main/res/values-night-v8/colors.xml
+++ b/app/src/main/res/values-night-v8/colors.xml
@@ -3,8 +3,9 @@
     <color name="colorTab">#5A458D</color>
     <color name="colorTabText">@android:color/secondary_text_dark</color>
     <color name="colorTabTextSelected">@android:color/primary_text_dark</color>
-    <color name="colorPrimary">#341D6D</color>
+    <color name="colorPrimary">#6C52AB</color>
     <color name="colorPrimaryDark">#24144D</color>
+    <color name="colorActionBar">#121212</color>
     <color name="colorAccent">@color/design_default_color_secondary</color>
     <color name="colorBackgroundGray">#1CFFFFFF</color>
     <color name="navViewBackground">#FF202020</color>
