--- a/app/src/main/res/layout/activity_connection_details.xml
+++ b/app/src/main/res/layout/activity_connection_details.xml
@@ -82,9 +82,8 @@
                     app:tint="@color/colorTabText"/>
                 <TextView
                     android:id="@+id/detail_info"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0.75"
                     android:textIsSelectable="true"
                     tools:text="ssl.example.com" />
             </LinearLayout>
@@ -131,13 +130,30 @@
                     android:layout_height="match_parent"
                     android:paddingVertical="3sp"
                     android:src="@drawable/ic_skull"
-                    app:tint="@color/colorTabText"/>
+                    app:tint="@color/colorTabText"
+                    android:contentDescription="@string/malicious" />
                 <TextView
                     android:id="@+id/detail_destination"
+                    android:layout_gravity="center_vertical"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textIsSelectable="true"
                     tools:text="5.6.7.8:443" />
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/whois_ip"
+                    android:insetTop="0dp"
+                    android:insetBottom="0dp"
+                    android:minWidth="0dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:paddingVertical="0dp"
+                    android:paddingHorizontal="5dp"
+                    android:drawableEnd="@drawable/ic_external"
+                    app:drawableTint="@color/colorPrimary"
+                    style="@style/Widget.MaterialComponents.Button.TextButton"
+                    android:textSize="12sp"
+                    android:text="@string/whois_lookup"/>
             </LinearLayout>
         </TableRow>
 
