--- a/app/src/main/res/menu/list_edit_menu.xml
+++ b/app/src/main/res/menu/list_edit_menu.xml
@@ -4,8 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/show_help"
-        android:title="@string/show_help"
+        android:id="@+id/show_hint"
+        android:title="@string/hint"
         android:orderInCategory="10"
         android:icon="@drawable/ic_help"
         app:showAsAction="ifRoom" />
