--- a/app/src/main/res/layout/ctrl_consent.xml
+++ b/app/src/main/res/layout/ctrl_consent.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="#2A2A2A"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/navViewBackground"
     android:filterTouchesWhenObscured="true"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -12,11 +13,75 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@android:color/white"
         android:textStyle="bold"
         android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="20dp"
         android:textSize="18sp"
         android:text="@string/ctrl_consent_title" />
+
+    <LinearLayout
+        android:id="@+id/caller_app"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical">
+
+            <ImageView
+                android:id="@+id/app_icon"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="15dp"
+                android:adjustViewBounds="false"
+                tools:src="@drawable/ic_apps"
+                tools:tint="@color/colorAccent" />
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical">
+
+                <TextView
+                    android:id="@+id/app_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    tools:text="App Name" />
+
+                <TextView
+                    android:id="@+id/app_package"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="my.app.package" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <RadioGroup
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <RadioButton
+                android:id="@+id/choice_once"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="15dp"
+                android:text="@string/once"
+                android:checked="true" />
+            <RadioButton
+                android:id="@+id/choice_forever"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/forever" />
+        </RadioGroup>
+    </LinearLayout>
 
     <TextView
         android:layout_width="wrap_content"
@@ -25,7 +90,7 @@
         android:textStyle="bold"
         android:layout_gravity="center_horizontal"
         android:textAlignment="center"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         android:text="@string/ctrl_consent" />
 
     <LinearLayout
