--- a/app/src/main/res/layout/about_activity.xml
+++ b/app/src/main/res/layout/about_activity.xml
@@ -32,50 +32,48 @@
             android:textStyle="bold"
             tools:text="PCAPdroid vx.y.z"/>
 
-        <TextView
-            android:id="@+id/app_description"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="vertical"
             android:layout_below="@id/app_version"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="50dp"
-            android:text="@string/about_text"/>
+            android:layout_alignParentStart="true">
 
-        <TextView
-            android:id="@+id/app_copyright"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/app_description"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="20dp"
-            android:autoLink="email"
-            android:text="Copyright (C) 2020-21 - Emanuele Faranda black.silver@hotmail.it"/>
+            <TextView
+                android:id="@+id/app_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
+                android:text="@string/about_text" />
 
-        <TextView
-            android:id="@+id/app_no_warranty"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/app_copyright"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="20dp"
-            android:text="@string/app_no_warranty"/>
+            <TextView
+                android:id="@+id/app_copyright"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:autoLink="email"
+                android:text="Copyright (C) 2020-21 - Emanuele Faranda black.silver@hotmail.it" />
 
-        <TextView
-            android:id="@+id/app_license_link"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/app_no_warranty"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="20dp"
-            android:text="@string/gpl_license_link"/>
+            <TextView
+                android:id="@+id/app_license"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="@string/app_license"/>
 
-        <TextView
-            android:id="@+id/app_source_link"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/app_license_link"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="20dp"
-            android:text="@string/source_code"/>
+            <TextView
+                android:id="@+id/app_source_link"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="@string/source_code"/>
+
+            <TextView
+                android:id="@+id/opensource_licenses"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="@string/opensource_licenses"/>
+        </LinearLayout>
     </RelativeLayout>
 </ScrollView>
