--- a/app/src/main/res/layout/connection_item.xml
+++ b/app/src/main/res/layout/connection_item.xml
@@ -29,25 +29,55 @@
         android:layout_weight="1"
         android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/app_name"
-            android:textStyle="bold"
-            android:textSize="14sp"
-            app:layout_constrainedWidth="true"
-            android:ellipsize="end"
-            android:singleLine="true"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/app_name_layout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/blacklisted"
-            app:layout_constraintHorizontal_bias="0"
-            tools:text="Android" />
+            app:layout_constraintEnd_toStartOf="@+id/status_ind"
+            android:layout_marginEnd="5dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/app_name"
+                android:textStyle="bold"
+                android:textSize="14sp"
+                android:ellipsize="end"
+                android:singleLine="true"
+                android:layout_width="0dp"
+                android:layout_weight="2"
+                android:layout_height="wrap_content"
+                tools:text="Android" />
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/blacklisted"
+                    android:layout_width="wrap_content"
+                    android:layout_height="12sp"
+                    android:layout_marginEnd="5dp"
+                    app:tint="@color/colorTabText"
+                    android:contentDescription="@string/malicious_connection_filter"
+                    android:src="@drawable/ic_skull" />
+
+                <TextView
+                    android:id="@+id/country_code"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp"
+                    tools:text="IT"/>
+            </LinearLayout>
+        </LinearLayout>
 
         <TextView
             android:id="@+id/status_ind"
             android:textSize="12sp"
-            android:minEms="3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAlignment="textEnd"
@@ -57,31 +87,11 @@
             tools:text="@string/conn_status_open" />
 
         <TextView
-            android:id="@+id/country_code"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="5dp"
-            android:textSize="14sp"
-            app:layout_constraintEnd_toStartOf="@id/blacklisted"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="IT"/>
-
-        <ImageView
-            android:id="@+id/blacklisted"
-            android:layout_width="wrap_content"
-            android:layout_height="12sp"
-            app:layout_constraintEnd_toStartOf="@id/status_ind"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="@id/status_ind"
-            app:tint="@color/colorTabText"
-            android:src="@drawable/ic_skull" />
-
-        <TextView
             android:id="@+id/last_seen"
             android:textSize="12sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/app_name"
+            app:layout_constraintTop_toBottomOf="@id/app_name_layout"
             app:layout_constraintEnd_toEndOf="parent"
             tools:text="17:15:00"/>
 
@@ -90,7 +100,7 @@
             android:textSize="13sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/app_name"
+            app:layout_constraintTop_toBottomOf="@id/app_name_layout"
             app:layout_constraintStart_toStartOf="parent"
             tools:text="HTTP, 80" />
 
