Add ability to hide connections matching country

--- a/app/src/main/res/menu/connection_context_menu.xml
+++ b/app/src/main/res/menu/connection_context_menu.xml
@@ -33,6 +33,12 @@
                 android:id="@+id/hide_proto"
                 android:title=""
                 tools:title="@string/protocol_val" />
+
+            <item
+                android:id="@+id/hide_country"
+                android:title=""
+                tools:title="@string/country_val"
+                android:visible="false" />
         </menu>
     </item>
 
