Initial malware detection overview (wip)
- Overall status of malware detection
- Show the blacklists used, check their status
- Whitelist moved to this activity

--- a/app/src/main/res/menu/nav_items.xml
+++ b/app/src/main/res/menu/nav_items.xml
@@ -8,15 +8,15 @@
         <item
             android:id="@+id/action_stats"
             android:title="@string/stats"
-            android:icon="@drawable/ic_list" />
+            android:icon="@drawable/ic_stacked_bar_chart" />
         <item
-            android:id="@+id/edit_malware_whitelist"
-            android:title="@string/malware_whitelist"
-            android:icon="@drawable/ic_checklist" />
+            android:id="@+id/malware_detection"
+            android:title="@string/malware_detection"
+            android:icon="@drawable/ic_bug" />
         <item
             android:id="@+id/open_root_log"
             android:title="@string/root_log"
-            android:icon="@drawable/ic_bug_report"
+            android:icon="@drawable/ic_text_snippet"
             android:visible="false" />
     </group>
     <group android:id="@+id/group_social">
