--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,5 +17,6 @@
     <color name="ok">#0CB350</color>
     <color name="warning">#FF5722</color>
     <color name="danger">#F80013</color>
+    <color name="in_progress">#29b6f6</color>
     <color name="highContrast">#000000</color>
 </resources>
