--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -120,6 +120,14 @@
             app:iconSpaceReserved="false"
             app:summary="@string/malware_detection_summary"
             app:defaultValue="false" />
+
+        <Preference
+            app:key="malware_detection_docs"
+            app:title="@string/malware_detection_learn_more"
+            app:iconSpaceReserved="false">
+            <intent android:action="android.intent.action.VIEW"
+                android:data="https://emanuele-f.github.io/PCAPdroid/paid_features#51-malware-detection" />
+        </Preference>
     </PreferenceCategory>
 
     <PreferenceCategory app:title="@string/other_prefs" app:iconSpaceReserved="false" >
