Add warning in SOCKS5 mode with no app filter
Closes #143

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,7 +15,7 @@
     <color name="statusClosed">#AAAAAA</color>
     <color name="statusError">#F20015</color>
     <color name="ok">#0CB350</color>
-    <color name="warning">#FF5722</color>
+    <color name="warning">#EC5F14</color>
     <color name="danger">#F80013</color>
     <color name="in_progress">#29b6f6</color>
     <color name="highContrast">#000000</color>
