--- a/app/src/main/res/layout/status.xml
+++ b/app/src/main/res/layout/status.xml
@@ -23,6 +23,7 @@
             android:autoLink="web"
             android:drawablePadding="10dp"
             tools:text="Collector Info"
+            tools:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/status_view" />
@@ -34,6 +35,7 @@
             android:layout_marginTop="20dp"
             android:gravity="center"
             tools:text="Capturing from eth0..."
+            tools:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/collector_info" />
@@ -76,8 +78,9 @@
                 android:layout_marginTop="10dp"
                 android:paddingEnd="0dp">
 
-                <include layout="@layout/quick_settings_item"
+                <include
                     android:id="@+id/app_filter_text"
+                    layout="@layout/quick_settings_item"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="50dp" />
@@ -87,6 +90,16 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true" />
+
+                <TextView
+                    android:id="@+id/app_filter_warning"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/app_filter_text"
+                    android:paddingHorizontal="10dp"
+                    android:text="@string/decryption_no_filter_warn"
+                    android:textColor="@color/warning"
+                    android:textSize="14sp" />
             </RelativeLayout>
 
         </LinearLayout>
