--- a/app/src/main/res/layout/blacklist_item.xml
+++ b/app/src/main/res/layout/blacklist_item.xml
@@ -39,9 +39,9 @@
         android:id="@+id/type"
         app:layout_constraintStart_toStartOf="@id/label"
         app:layout_constraintTop_toBottomOf="@id/label"
-        android:layout_marginTop="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="13sp"
         tools:text="Type: IP blacklist" />
 
     <TextView
@@ -50,6 +50,7 @@
         app:layout_constraintTop_toBottomOf="@id/type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="13sp"
         tools:text="150k rules" />
 
     <TextView
@@ -58,5 +59,6 @@
         app:layout_constraintTop_toBottomOf="@id/rules"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="13sp"
         tools:text="Last update: 12:02:11" />
 </androidx.constraintlayout.widget.ConstraintLayout>
